tests/errors/undecl-at-id-set.au
struct A{}

func (self: A) a() {
    @a = 1;
}